create cat object

--- a/index.html
+++ b/index.html
@@ -9,21 +9,18 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col">
-          <h1 class="my-4">Cat clicker!</h1>
+      <div class="row justify-content-center">
+        <div class="col pt-4">
+          <h1 class="my-4 text-center">Cat clicker!</h1>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
-          <p class="cat-1-name"></p>
-          <img id="cat-1-pic" src="img/cat.jpg">
-          <p id="cat-1-score"></p>
+      <div class="row justify-content-md-center">
+        <div class="col-md-4" id="cat-1">
+          <p id="cat-1-name"></p>
+          <img id="cat-pic-1" class="img-fluid" src="img/cat.jpg">
+          <p id="score-text">Clicks:</p>
         </div>
-        <div class="col">
-          <p class="cat-name"></p>
-          <img id ="cat-2-pic" src="img/cat2.jpg">
-          <p id="cat-2-score"></p>
+        <div class="col-md-4" id="cat-2">
         </div>
       </div>
 
